--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "expo": "~44.0.0",
+    "expo-file-system": "~13.1.0",
+    "expo-image-picker": "~12.0.1",
+    "expo-location": "^14.0.1",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-image-picker": "^4.6.1",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
